Changed parent to scm/acls/domain_network_and_connectivity/data_network.

--- a/project.config
+++ b/project.config
@@ -1,7 +1,6 @@
 [access]
-	inheritFrom = scm/acls/domain_base
+	inheritFrom = scm/acls/domain_network_and_connectivity/data_network
 [project]
-	state = active
 	description = "Domain: Base;"\n\
 "Licenses: BSD,BSD-2-Clause;"\n\
 
