--- a/project.config
+++ b/project.config
@@ -1,6 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_network_and_connectivity/uncategorized
 [project]
-	description = "Domain: Base;"\n\
-"Licenses: BSD,BSD-2-Clause;"\n\
-
+	description = "Domain: Network & Connectivity / Uncategorized;"
